fixed some padding on mobile view to match mvp

--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,7 @@ footer {
 @media (max-width: 500px) {
   .home .walk {
     flex-direction: column-reverse;
+    padding: 5rem 1.5rem;
   }
 }
 .home .walk .walk-text {
