--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,6 +63,7 @@
 
     @media @mobile {
       flex-direction: column-reverse;
+      padding: 5rem 1.5rem;
     }
 
     .walk-text {
